--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -1,14 +1,16 @@
 <% if !@pages_list.blank? %>
-<h2>Images</h2>
-<ul class="thumbnails">
-<% @pages_list.each do |page| %>
-<li class="span4">
-    <a href="<%= pul_store_page_path(page['id']) %>" class="thumbnail">
-      <img data-sort-order="<%= page['desc_metadata__sort_order_isi'] %>" 
-            src="<%= pul_store_iiif_path(page['id'], {size: "!200,200"}) %>"
-            alt="<%= page['desc_metadata__display_label_ssm'] %>" >
-    </a>
-  </li>
-<% end %>
-</ul>
+  <h2><%= @pages_list.size %> Images</h2>
+  <div id="pages" class="row">
+  <% @pages_list.each do |page| %>
+    <div class="col-xs-6 col-md-3">
+      <div class="thumbnail">
+        <a href="<%= pul_store_page_path(page['id']) %>" class="thumbnail">
+          <img data-sort-order="<%= page['desc_metadata__sort_order_isi'] %>" 
+                src="<%= pul_store_iiif_path(page['id'], {size: "!200,200"}) %>"
+                alt="<%= page['desc_metadata__display_label_ssm'] %>" >
+        </a>
+      </div>
+    </div>
+  <% end %>
+  </div>
 <% end %>
