--- a/app/assets/stylesheets/lae.css.scss
+++ b/app/assets/stylesheets/lae.css.scss
@@ -52,3 +52,52 @@ a:visited.btn {
 #lae-box-folder-options {
   margin-bottom: 1em;
 }
+
+#page-thumbnails {
+  padding: 0;
+  li {
+      padding-top: 5px;
+      margin: 5px;
+      height: 260px;
+      width: 210px;
+      float: left;
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      border: 1px solid #DDD;
+      -webkit-border-radius: 4px;
+      -moz-border-radius: 4px;
+      border-radius: 4px;
+      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+      -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.055);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.055);
+      -webkit-transition: all .2s ease-in-out;
+      -moz-transition: all .2s ease-in-out;
+      -o-transition: all .2s ease-in-out;
+      transition: all .2s ease-in-out;
+
+    a {
+      display: block;
+      height: 100%;
+      width: 100%;
+      text-decoration: none;
+    }
+
+    p {
+      font-weight: bold;
+      color: black;
+      padding: 5px;
+      margin-bottom: -5px;
+      max-width: 200px;
+    }
+    a:hover {
+      background-color: white;
+    }
+    
+    li:hover {
+      border: 1px solid red;
+    }
+
+
+  }
+}
