--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -1,16 +1,15 @@
-<% if !@pages_list.blank? %>
+<% unless @pages_list.blank? %>
   <h2><%= @pages_list.size %> Images</h2>
-  <div id="pages" class="row">
+  <ol id="page-thumbnails">
   <% @pages_list.each do |page| %>
-    <div class="col-xs-6 col-md-3">
-      <div class="thumbnail">
-        <a href="<%= pul_store_page_path(page['id']) %>" class="thumbnail">
-          <img data-sort-order="<%= page['desc_metadata__sort_order_isi'] %>" 
-                src="<%= pul_store_iiif_path(page['id'], {size: "!200,200"}) %>"
-                alt="<%= page['desc_metadata__display_label_ssm'] %>" >
-        </a>
-      </div>
-    </div>
+    <li>
+      <a href="<%= pul_store_page_path(page['id']) %>">
+        <img data-sort-order="<%= page['desc_metadata__sort_order_isi'] %>" 
+             src="<%= pul_store_iiif_path(page['id'], {size: "!200,200"}) %>"
+             alt="<%= page['desc_metadata__display_label_ssm'] %>" >
+        <p class="caption"><%= page['desc_metadata__display_label_ssm'] %></p>
+      </a>
+    </li>
   <% end %>
-  </div>
+  </ol>
 <% end %>
