--- a/app/views/pul_store/lae/folders/_page_preview.html.erb
+++ b/app/views/pul_store/lae/folders/_page_preview.html.erb
@@ -8,7 +8,7 @@
 %>
 
 <h2><%= pluralize(@pages_list.size, 'Images') %></h2>
-<% if !@pages_list.blank? %>
+<% unless @pages_list.blank? %>
   <div>
     <% images = pul_store_iiif_page_info_list(@pages_list) %>
     <%= openseadragon_picture_tag images, class: 'osd-image row', data: { openseadragon: osd_config } %>
