--- a/app/views/catalog/_home_text.html.erb
+++ b/app/views/catalog/_home_text.html.erb
@@ -1,2 +1,13 @@
 <h4><%= t('blacklight.welcome') %></h4>
 
+<div hr class="list-group">
+  <a href="/lae" class="list-group-item">
+    <h4 class="list-group-item-heading">Latin American Ephemera</h4>
+    <p class="list-group-item-text">Manage Lae Materials</p>
+  </a>
+  <a href="/lae" class="list-group-item">
+    <h4 class="list-group-item-heading">Project Two</h4>
+    <p class="list-group-item-text">Process Project Two Materials</p>
+  </a>
+</div>
+
