--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -14,13 +14,12 @@
       </div>
   </div>
 </div>
-  <div class="jumbotron">
     <div class="container">
-      <div class="col-md-3">
-          <%= link_to application_name, root_path, :class => "brand" %>
+      <div class="col-md-12">
+          <h1>PUL Store <small><%= link_to application_name, root_path, :class => "brand" %></small></h1>
        </div>
     </div>
-  </div>
+  
   <div class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="navbar-right col-sm-4 col-md-4" id="searchbar">         
