--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -2,6 +2,14 @@
 
 @import 'blacklight/blacklight';
 
+.navbar, .jumbotron { 
+  margin-bottom: 0;
+}
+
+.navbar-header, .navbar-right {
+  margin-top: .5em;
+}
+
 footer {
   background-color: #f2f1eb;
   border-top: 1px solid #dddddd;
