Add basic modal with osd in overlay
seperate view for oversize OSD dialog

Improve Image Integration

modal fix

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -2,6 +2,8 @@
 
 @import 'blacklight/blacklight';
 
+
+
 .navbar, .jumbotron { 
   margin-bottom: 0;
 }
@@ -14,4 +16,8 @@ footer {
   background-color: #f2f1eb;
   border-top: 1px solid #dddddd;
   margin-top: 1em;
+}
+
+.modal-backdrop.in {
+  z-index: 100;
 }
