--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -16,7 +16,7 @@
 </div>
     <div class="container">
       <div class="col-md-12">
-          <h1>PUL Store <small><%= link_to application_name, root_path, :class => "brand" %></small></h1>
+          <h1>PUL-Store <small><%= link_to application_name, root_path, :class => "brand" %></small></h1>
        </div>
     </div>
   
