--- a/app/views/records/edit_fields/_default.html.erb
+++ b/app/views/records/edit_fields/_default.html.erb
@@ -1,4 +1,5 @@
-      <div class="col-xs-7 col-xs-offset-3" <%  if index == 0 %> id="additional_<%= key.to_s %>_clone" <% end %>>
+      <div class="col-xs-7 <%  if index != 0 %>col-xs-offset-3<% end %>" 
+       <%  if index == 0 %> id="additional_<%= key.to_s %>_clone" <% end %>>
         <% required = render_req && (index == 0) && f.object.required?(key) %>
         <%= text_field_tag "#{ActiveModel::Naming.param_key(f.object)}[#{key.to_s}][]", v,  :id => "#{ActiveModel::Naming.param_key(f.object)}_#{key.to_s}", :class => "form-control", :required => required  %>
         <% unless f.object.class.unique?(key) %>
