--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,10 @@
 <footer>
-  <div class="row">
-  	<div class="col-md-3 col-md-offset-9">
-  		<p>&copy; <%= Date.today.year %> Trustees of Princeton University</p>
-      <p>Princeton University Library</p>
-  	</div>
+  <div class="container">
+    <div class="row">
+    	<div class="col-md-3 col-md-offset-9">
+    		<p>&copy; <%= Date.today.year %> Trustees of Princeton University</p>
+        <p>Princeton University Library</p>
+    	</div>
+    </div>
   </div>
 </footer>
