--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,8 +8,8 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ * Removed require jquery.fileupload-ui
  *= require_self
- *= require jquery.fileupload-ui
  *= require jquery.ui.all
  *= require hydra-editor/hydra-editor
  *= require font-awesome
