--- a/app/views/shared/lae/_header_navbar.html.erb
+++ b/app/views/shared/lae/_header_navbar.html.erb
@@ -1,6 +1,5 @@
-<div class="navbar navbar-default navbar-static-top"> 
+<div class="navbar navbar-default navbar-static-top navbar-branding">  
   <div class="container">  
-      <%= link_to application_name, "/lae", class: "lae-brand navbar-brand" %>
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#user-util-collapse">
           <span class="sr-only">Toggle navigation</span>
@@ -8,12 +7,14 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <%= link_to application_name, "/lae", class: "lae-brand navbar-brand" %>
       </div>
       <div class="collapse navbar-collapse">
-        <%= render :partial=>'shared/lae/user_util_links' %>                 
+        <%= render :partial=>'shared/lae/user_util_links' %>                
       </div>
+    </div>  
   </div>
-</div>
+  </div>
 <div class="navbar navbar-default" role="navigation">
   <div class="container">
     <ul class="nav navbar-nav nav-pills">
