apply folder sort after ajax load all folder events. Extract into jquery plugin. Close #305

--- a/app/views/pul_store/lae/boxes/folders.js.erb
+++ b/app/views/pul_store/lae/boxes/folders.js.erb
@@ -3,4 +3,4 @@ var folders_message = $("<%= escape_javascript(render :partial => 'folders_messa
 $(".folder-options").replaceWith(folders_message);
 $("#folders-table").replaceWith(response);
 $(".show-all-folders").addClass('disabled');
-
+$("#folders-table").laeBoxFolderSort(); // sort folder table upon load
