--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -1,11 +1,11 @@
-@import 'compass';
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
 /* local bootstrap overrides */
 @import "variables/**/*";
+@import 'blacklight/blacklight';
 @import 'bootstrap-overrides';
-@import 'blacklight/facets';
+
 
 .modal-backdrop.in {
   z-index: 100;
@@ -25,4 +25,16 @@ footer {
   background-color: $light-gray;
   margin-top: 20px;
   bottom: 0;
+}
+
+.navbar + .navbar {
+  margin-top: 0px;
+}
+
+.navbar-nav {
+  padding-top: 5px; 
+}
+
+h1 {
+  margin-top: 10px;
 }
