--- a/app/views/pul_store/lae/folders/create.js.erb
+++ b/app/views/pul_store/lae/folders/create.js.erb
@@ -11,4 +11,5 @@ $(response).prependTo("#new_lae_folder");
     this.reset();
   });
   $('input:text:visible:first', '#new_lae_folder').focus();
+  $("#folders-table").laeBoxFolderSort();
 <% end %>
