--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
     	<div class="col-md-3 col-md-offset-9">
-    		<p>&copy; <%= Date.today.year %> Trustees of Princeton University</p>
-        <p>Princeton University Library</p>
+        <%= image_tag("logos/pu_logo_trans.png") %>
+    		<p>&copy; <%= Date.today.year %> Trustees of Princeton University. All rights reserved.</p>
     	</div>
     </div>
   </div>
