--- a/app/views/shared/_header_navbar.html.erb
+++ b/app/views/shared/_header_navbar.html.erb
@@ -17,7 +17,7 @@
   <div class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="col-md-8 col-sm-4">
-        <h1><%= link_to application_name, root_path, :class => "brand" %></h1>
+        <h1><%= application_name %></h1>
        </div>
       <div class="navbar-right col-sm-4 col-md-4" id="searchbar">         
           <%= render_search_bar  %>
