--- a/app/views/layouts/lae.html.erb
+++ b/app/views/layouts/lae.html.erb
@@ -19,7 +19,7 @@
     <![endif]-->
 
   </head>
-  <body class="<%= render_body_class %>">
+  <body class="lae-project <%= render_body_class %>">
     <%= render :partial => 'shared/lae/header_navbar' %>
 
     <div id="ajax-modal" class="modal hide fade" tabindex="-1"></div>
