--- a/app/views/shared/lae/_header_navbar.html.erb
+++ b/app/views/shared/lae/_header_navbar.html.erb
@@ -7,7 +7,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to application_name, "/lae", class: "lae-brand navbar-brand" %>
+        <%= link_to "", "/lae", class: "lae-brand navbar-brand" %>
       </div>
       <div class="collapse navbar-collapse">
         <%= render :partial=>'shared/lae/user_util_links' %>                
