--- a/app/assets/stylesheets/components/pages.css.scss
+++ b/app/assets/stylesheets/components/pages.css.scss
@@ -12,7 +12,7 @@
       display: table-cell;
       vertical-align: middle;
       text-align: center;
-      border: 1px solid #DDD;
+      border: 1px solid $faded-gray;
       -webkit-border-radius: 4px;
       -moz-border-radius: 4px;
       border-radius: 4px;
