--- a/app/views/pul_store/lae/folders/_page_preview.html.erb
+++ b/app/views/pul_store/lae/folders/_page_preview.html.erb
@@ -1,7 +1,7 @@
 <% 
 
   osd_config = {
-    crossOriginPolicy: false,
+    crossOriginPolicy: true,
     preserveViewport: true, 
     visibilityRatio: 1
   }
