--- a/app/assets/stylesheets/bootstrap-variables.css.scss
+++ b/app/assets/stylesheets/bootstrap-variables.css.scss
@@ -1,5 +1,4 @@
 /* bootstrap-overrides.css.scss file */
-@import "variables/**/*";
 
 //== Colors
 //
@@ -23,9 +22,9 @@ $brand-danger:          #d9534f !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               $light-gray !default;
+$body-bg:               #000;
 //** Global text color on `<body>`.
-$text-color:            $gray-dark !default;
+$text-color:            $gray-dark;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
@@ -56,3 +55,5 @@ $font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
 
 //navbar
 $navbar-default-bg:                $dark-gray !default;
+
+$text-muted:                       $gray-light;
