--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -9,195 +9,227 @@
       </ul>
     </div>
   <% end %>
-<div class="row">
-
-
-  <div id="desc-metadata" class="col-md-6">
-    <!-- Language -->
-    <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :language } %>
-
-    <!-- Title -->
-    <div class="form-group">
-    <%= b.label :title, "Title", :class=>"control-label col-xs-3" %>
-    <% if @folder.title.empty? %>
-      <div class="col-xs-7">
-        <%= text_field_tag "lae_folder[title][]", nil, :id => 'lae_folder_title', class: "form-control" %>
+  <div class="row">
+    <!-- start the left sidbar -->
+    <div class="col-md-2 lae-folder-edit-options">
+      <div>
+        <ul class="nav nav-tabs nav-stacked" role="tablist">
+          <li class="active">
+            <a role="tab" data-toggle="tab" href="#desc-metadata">Descriptive</a>
+          </li>
+          <li><a role="tab" data-toggle="tab" href="#admin-metadata">Administrative</a></li>
+          <li><a role="tab" data-toggle="tab" href="#image-preview">All Images</a></li>
+        </ul>
       </div>
-    <% else %>
-      <% @folder.title.to_ary.each_with_index do |title, index| %>
-        <div class="col-xs-7">
-          <%= text_field_tag "lae_folder[title][]", title, :id => 'lae_folder_title' , class: "form-control"%>
-        </div>
-      <% end %>
-    <% end %>
-    </div>
-    <!-- sort title -->
-    <div class="form-group">
-      <%= b.label :sort_title, :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.text_field :sort_title, class: "form-control" %>
-      </div>
-    </div>
-    <!-- Alternative Title -->
-     <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :alternative_title } %>
-     <!-- Series -->
-      <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :series } %>
-    <!-- creator -->
-    <div class="form-group">
-      <%= b.label :creator, "Creator", :class=>"control-label col-xs-3" %>
-      <% @folder.creator.to_ary.each_with_index do |creator, index| %>
-        <div class="col-xs-7">
-        <%= text_field_tag "lae_folder[creator][]", creator, :id =>'lae_folder_creator', placeholder: 'Use if only one author', class: "form-control" %>
-      </div>
-      <% end %>
-      <% if @folder.creator.empty? %>
-      <div class="col-xs-7">
-        <%= text_field_tag "lae_folder[creator][]", nil, :id =>'lae_folder_creator', placeholder: 'Use if only one author', class: "form-control" %>
-      </div>
-      <%- end %>
-    </div>
-    <!-- Contributor -->
-      <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :contributor } %>
-      <!-- Publisher -->
-      <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => true, :key => :publisher } %>
-      <!-- Geographic Origin -->
-      <!-- Geographic -->
-      <div class="form-group">
-        <%= b.label :geographic_origin, :class=>"control-label col-xs-3" %>
-        <div class="col-xs-7">
-          <%= b.select(:geographic_origin, options_for_select(list_all_areas_as_select_list, [@folder.geographic_origin]), { prompt: 'Select'} , { class: "form-control" }) %>
-        </div>
-      </div>
-      <% if !@folder.earliest_created.blank? && !@folder.latest_created.blank? %>
-      <% date_range_type_class = "active-date-range" %>
-      <% date_created_type_class = "no-active-date-created" %>
-      <% date_toggle_message = "Use Single Date" %>
-    <% else %>
-      <% date_range_type_class = "no-active-date-range" %>
-      <% date_created_type_class = "active-date-created" %>
-      <% date_toggle_message = "Use Date Range Instead" %>
-    <% end %>
-    <div class="form-group date-toggle">
-      <div class="col-xs-7 col-xs-offset-3">
-        <button id="date-type-toggle" type="button" class="btn btn-info"><%= date_toggle_message %></button>
-      </div>
-    </div>
-    <!-- date created -->
-    <div class="date-options <%= date_created_type_class %>">
-      <div class="form-group" id="date-created">
-        <%= b.label :date_created, :class=>"control-label col-xs-3" %>
-        <div class="col-xs-5">
-          <%= b.text_field :date_created, :id => 'lae_folder_date_created', placeholder: 'Date', class: "form-control" %>
-        </div>
-      </div>
-    </div>
-    <div class="date-options <%= date_range_type_class %>">
-    <!-- :earliest_created, :latest_created -->
-    <div class="form-group">
-      <%= b.label "Date Range", :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7 row">
-        <div class="input-prepend col-xs-6">
-          <%= b.text_field :earliest_created, :id => 'lae_folder_earliest_created', placeholder: 'Start', class: "form-control" %>
-        </div>
-        <div class="input-append col-xs-6">
-          <%= b.text_field :latest_created, :id => 'lae_folder_latest_created', placeholder: 'End', class: "form-control" %>
-        </div>
-      </div>
-    </div>
-  </div>
-      <!-- Genre -->
-    <div class="form-group">
-      <%= b.label :genre, :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.select(:genre, options_for_select(list_all_genres_as_select_list, [@folder.genre]), {}, {class: "form-control"}) %>
-      </div>
-    </div>
-    <!-- Subject -->
-      <%= render :partial => "form_subjects", locals: {subject: :subject, category: :category} %>
-
-    <!-- Geographic Subject -->
-    <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :geographic_subject } %>
-
-    <!-- Decription -->
-    <div class="form-group">
-      <%= b.label :description, :class => 'control-label col-xs-3' %>
-      <div class="col-xs-7">
-        <%= b.text_area :description, cols: 50, rows: 6, class: "form-control" %>
-      </div>
-    </div>
-  </div>
-  <div id="admin-metadata" class="col-md-4">
-        <%= render :partial => "page_preview" %>
-    <div id="admin-metadata">
-    <div class="form-group">
-      <%= b.label "State",  :class=>"control-label col-xs-3" %>
-      <div class="controls">
+      <div class="lae-folder-state">
         <%= render :partial => 'shared/lae/workflow_state_badge', locals: {object: @folder} %>
       </div>
-    </div>
-    <div class="form-group">
-      <%= b.label "Folder Number", :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.text_field :physical_number, class: "form-control" %>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <%= b.label :barcode, :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.text_field :barcode, class: "form-control" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= b.label :error_note, :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.text_area :error_note, cols: 50, rows: 3, class: "form-control" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= b.label :suppressed, :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.check_box :suppressed, { class: 'checkbox' }, "true", "false" %>
-      </div>
-    </div>
-    <!-- passed qc :passed_qc -->
-    <div class="form-group">
-      <%= b.label :passed_qc, :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.check_box :passed_qc, { class: 'checkbox' }, "true", "false" %>
-      </div>
-    </div>
-    <div class="form-group">
-      <%= b.label :rights, :class=>"control-label col-xs-3" %>
-      <div class="col-xs-7">
-        <%= b.text_area :rights, cols: 50, rows: 6, class: "form-control" %>
-      </div>
-    </div>
-    </div>
-    <div class="form-group">
-      <%= b.label "Width x Height (cm)", class: 'control-label col-xs-3' %>
-      <div class="col-xs-9 row">
-        <div class="input-prepend col-xs-4">
-          <%= b.text_field :width_in_cm, placeholder: 'Width', class: "form-control" %>
+      <div>
+        <div class="form-group">
+          <%= b.label :suppressed, :class=>"control-label col-md-1" %>
+          <div class="col-md-1 col-md-offset-5">
+            <%= b.check_box :suppressed, { class: 'checkbox' }, "true", "false" %>
+          </div>
         </div>
-        <div class="col-xs-1">x</div>
-        <div class="input-append col-xs-4">
-          <%= b.text_field :height_in_cm, placeholder: 'Height', class: "form-control" %>
-       </div>
+        <!-- passed qc :passed_qc -->
+        <div class="form-group">
+          <%= b.label :passed_qc, :class=>"control-label col-md-1" %>
+          <div class="col-md-1 col-md-offset-5">
+            <%= b.check_box :passed_qc, { class: 'checkbox' }, "true", "false" %>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="actions">
+        <%= b.submit :value => "Update Folder", :class => 'btn btn-primary btn-lg' %>
+        </div>
       </div>
     </div>
-    <div class="form-group">
-    <%= b.label :page_count, class: 'control-label col-xs-3' %>
-      <div class="col-xs-7">
-        <%= b.text_field :page_count, class: 'form-control', placeholder: "Num Pages" %>
+    <!-- end left sidebar -->
+    <!-- start the tabs -->
+    <div class="tablist lae-edit col-md-10">
+      <div role="tabpanel" id="desc-metadata" class="active tab-pane row">
+        <div class="col-md-7">
+          <!-- Language -->
+          <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :language } %>
+
+          <!-- Title -->
+          <div class="form-group">
+          <%= b.label :title, "Title", :class=>"control-label col-xs-3" %>
+          <% if @folder.title.empty? %>
+            <div class="col-xs-7">
+              <%= text_field_tag "lae_folder[title][]", nil, :id => 'lae_folder_title', class: "form-control" %>
+            </div>
+          <% else %>
+            <% @folder.title.to_ary.each_with_index do |title, index| %>
+              <div class="col-xs-7">
+                <%= text_field_tag "lae_folder[title][]", title, :id => 'lae_folder_title' , class: "form-control"%>
+              </div>
+            <% end %>
+          <% end %>
+          </div>
+          <!-- sort title -->
+          <div class="form-group">
+            <%= b.label :sort_title, :class=>"control-label col-xs-3" %>
+            <div class="col-xs-7">
+              <%= b.text_field :sort_title, class: "form-control" %>
+            </div>
+          </div>
+          <!-- Alternative Title -->
+          <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :alternative_title } %>
+          <!-- Series -->
+          <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :series } %>
+          <!-- creator -->
+          <div class="form-group">
+            <%= b.label :creator, "Creator", :class=>"control-label col-xs-3" %>
+            <% @folder.creator.to_ary.each_with_index do |creator, index| %>
+              <div class="col-xs-7">
+              <%= text_field_tag "lae_folder[creator][]", creator, :id =>'lae_folder_creator', placeholder: 'Use if only one author', class: "form-control" %>
+            </div>
+            <% end %>
+            <% if @folder.creator.empty? %>
+            <div class="col-xs-7">
+              <%= text_field_tag "lae_folder[creator][]", nil, :id =>'lae_folder_creator', placeholder: 'Use if only one author', class: "form-control" %>
+            </div>
+            <%- end %>
+          </div>
+          <!-- Contributor -->
+          <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :contributor } %>
+          <!-- Publisher -->
+          <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => true, :key => :publisher } %>
+          <!-- Geographic Origin -->
+          <div class="form-group">
+            <%= b.label :geographic_origin, :class=>"control-label col-xs-3" %>
+            <div class="col-xs-7">
+              <%= b.select(:geographic_origin, options_for_select(list_all_areas_as_select_list, [@folder.geographic_origin]), { prompt: 'Select'} , { class: "form-control" }) %>
+            </div>
+          </div>
+          <!-- hack to decide which date option to display -->
+          <% if !@folder.earliest_created.blank? && !@folder.latest_created.blank? %>
+          <% date_range_type_class = "active-date-range" %>
+          <% date_created_type_class = "no-active-date-created" %>
+          <% date_toggle_message = "Use Single Date" %>
+          <% else %>
+          <% date_range_type_class = "no-active-date-range" %>
+          <% date_created_type_class = "active-date-created" %>
+          <% date_toggle_message = "Use Date Range Instead" %>
+          <% end %>
+          <div class="form-group date-toggle">
+            <div class="col-xs-7 col-xs-offset-3">
+              <button id="date-type-toggle" type="button" class="btn btn-info"><%= date_toggle_message %></button>
+            </div>
+          </div>
+          <!-- date created -->
+          <div class="date-options <%= date_created_type_class %>">
+            <div class="form-group" id="date-created">
+              <%= b.label :date_created, :class=>"control-label col-xs-3" %>
+              <div class="col-xs-5">
+                <%= b.text_field :date_created, :id => 'lae_folder_date_created', placeholder: 'Date', class: "form-control" %>
+              </div>
+            </div>
+          </div>
+          <div class="date-options <%= date_range_type_class %>">
+          <!-- :earliest_created, :latest_created -->
+            <div class="form-group">
+              <%= b.label "Date Range", :class=>"control-label col-xs-3" %>
+              <div class="col-xs-7 row">
+                <div class="input-prepend col-xs-6">
+                  <%= b.text_field :earliest_created, :id => 'lae_folder_earliest_created', placeholder: 'Start', class: "form-control" %>
+                </div>
+                <div class="input-append col-xs-6">
+                  <%= b.text_field :latest_created, :id => 'lae_folder_latest_created', placeholder: 'End', class: "form-control" %>
+                </div>
+              </div>
+            </div>
+          </div>
+            <!-- Genre -->
+          <div class="form-group">
+            <%= b.label :genre, :class=>"control-label col-xs-3" %>
+            <div class="col-xs-7">
+              <%= b.select(:genre, options_for_select(list_all_genres_as_select_list, [@folder.genre]), {}, {class: "form-control"}) %>
+            </div>
+          </div>
+          <!-- Subject -->
+          <%= render :partial => "form_subjects", locals: {subject: :subject, category: :category} %>
+
+          <!-- Geographic Subject -->
+          <%= render :partial => "records/edit_field", :locals => {:f => b, :render_req => false, :key => :geographic_subject } %>
+
+          <!-- Decription -->
+          <div class="form-group">
+            <%= b.label :description, :class => 'control-label col-xs-3' %>
+            <div class="col-xs-7">
+              <%= b.text_area :description, cols: 50, rows: 6, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+        <!-- osd preview -->
+        <div class="col-md-3">
+          <div>
+            <%= render :partial => "page_preview" %>
+          </div>
+        </div>
+      
+      </div>
+      <!-- end desc metadata tab -->
+      <div role="tabpanel" id="image-preview" class="tab-pane row">
+        <%= render :partial => 'pages_list' %>
+      </div>
+
+      <div role="tabpanel" id="admin-metadata" class="tab-pane row">
+          <div class="col-md-7">
+            <div class="form-group">
+              <%= b.label "Folder Number", :class=>"control-label col-xs-3" %>
+              <div class="col-xs-7">
+                <%= b.text_field :physical_number, class: "form-control" %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= b.label :barcode, :class=>"control-label col-xs-3" %>
+              <div class="col-xs-7">
+                <%= b.text_field :barcode, class: "form-control" %>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= b.label :error_note, :class=>"control-label col-xs-3" %>
+              <div class="col-xs-7">
+                <%= b.text_area :error_note, cols: 50, rows: 3, class: "form-control" %>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= b.label :rights, :class=>"control-label col-xs-3" %>
+              <div class="col-xs-7">
+                <%= b.text_area :rights, cols: 50, rows: 6, class: "form-control" %>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= b.label "Width x Height (cm)", class: 'control-label col-xs-3' %>
+              <div class="col-xs-9 row">
+                <div class="input-prepend col-xs-4">
+                  <%= b.text_field :width_in_cm, placeholder: 'Width', class: "form-control" %>
+                </div>
+                <div class="col-xs-1">x</div>
+                <div class="input-append col-xs-4">
+                  <%= b.text_field :height_in_cm, placeholder: 'Height', class: "form-control" %>
+               </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <%= b.label :page_count, class: 'control-label col-xs-3' %>
+              <div class="col-xs-7">
+                <%= b.text_field :page_count, class: 'form-control', placeholder: "Num Pages" %>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="row">
+              <%= render :partial => "page_preview" %>
+            </div>
+          </div>
+        
       </div>
     </div>
+    <!-- end the tabs -->
   </div>
- </div>
- <div class="row">
-  <div class="actions col-md-2">
-    <%= b.submit :value => "Update Folder", :class => 'btn btn-primary btn-large' %>
-  </div>
-</div>
-</div>
 <% end %>
