build update inc. move to rails 4.8
move to local gem fork of openseadragon-rails. Uses latest OSD build. After deployment pul store config needs to be pointed at loris2 as the IIIF base server

minor style tweaks bugfix for #322 modal problems

update to rake 10.4

convert to fluid layouts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,7 @@
 
 /* Imports and styles from Blacklight */
 @import 'blacklight/blacklight';
+/* blacklight hacks and overrides */
 @import 'blacklight'; 
 
 
