--- a/app/views/pul_store/lae/boxes/new.html.erb
+++ b/app/views/pul_store/lae/boxes/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add a New Box</h1>
 
-<div class="container" id="main-container">
+<div class="container-fluid" id="main-container">
 
   <div class="row">
     <%= render :partial => 'breadcrumb' %>
