--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -15,10 +15,10 @@
       <div>
         <ul class="nav nav-tabs nav-stacked" role="tablist">
           <li class="active">
-            <a role="tab" data-toggle="tab" href="#desc-metadata">Descriptive</a>
+            <a class="first" role="tab" data-toggle="tab" href="#desc-metadata">Descriptive</a>
           </li>
           <li><a role="tab" data-toggle="tab" href="#admin-metadata">Administrative</a></li>
-          <li><a role="tab" data-toggle="tab" href="#image-preview">All Images</a></li>
+          <li><a class="last" role="tab" data-toggle="tab" href="#image-preview">All Images</a></li>
         </ul>
       </div>
       <div class="lae-folder-state">
