--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -14,7 +14,7 @@
     <li>
       <button class="btn btn-link" data-toggle="modal" data-target="<%= pul_store_page_modal_target(page['id']) %>">
         <img data-sort-order="<%= page['desc_metadata__sort_order_isi'] %>" 
-             src="<%= pul_store_iiif_path(page['id'], {size: "!200,200"}) %>"
+             src="<%= pul_store_iiif_path(page['id'], {size: "!200,200", quality: "default" }) %>"
              alt="<%= page['desc_metadata__display_label_ssm'] %>" >
         <p class="caption">
           <%= page['desc_metadata__display_label_ssm'] %>
