--- a/app/views/shared/lae/_header_navbar.html.erb
+++ b/app/views/shared/lae/_header_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-default navbar-static-top navbar-branding">  
-  <div class="container">  
+  <div class="container-fluid">  
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#user-util-collapse">
           <span class="sr-only">Toggle navigation</span>
@@ -16,7 +16,7 @@
   </div>
   </div>
 <div class="navbar navbar-default" role="navigation">
-  <div class="container">
+  <div class="container-fluid">
     <ul class="nav navbar-nav nav-pills">
       <li><a href="/lae"><%= fa_icon 'home lg' %> Lae Home</a></li>
       <li class="dropdown">
