--- a/app/assets/stylesheets/components/lae.css.scss
+++ b/app/assets/stylesheets/components/lae.css.scss
@@ -9,15 +9,17 @@
 
 .lae-brand {
     background-image: image-url("lae/lae-logo-final.png");
+    background-position: 15px;
+    background-repeat: no-repeat;
     background-size: 338px 42px;
-    width: 338px ;
+    width: 353px ;
     height: 42px;
     display: inline-block;
     text-indent: 100%;
     white-space: nowrap;
     overflow: hidden;
-    padding-right:0;
-    padding-left: 0;
+    padding-right:15px;
+    padding-left: 15px;
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
@@ -28,6 +30,20 @@
     }
 }
 
+.lae-folder-edit-options {
+  .nav-stacked li.active a {
+    border: 1px solid #ddd;
+    border-right-color: transparent;
+  }
+
+  .nav-stacked li.active a.last {
+    border-right-color: transparent;
+  }
+
+  .nav-tabs.nav-stacked {
+    border-bottom: none;
+  }
+}
 
 .left-pad-btn {
   margin-left: 1em;
@@ -78,7 +94,7 @@ a:visited.btn {
 .lae-folder-state {
   padding-top: 10px;
   padding-bottom: 10px;
-  font-size: 180%;
+  font-size: 125%;
 }
 
 /** LAE Folder Edit Tab-Controls */
