--- a/app/views/layouts/lae.html.erb
+++ b/app/views/layouts/lae.html.erb
@@ -25,11 +25,11 @@
     <div id="ajax-modal" class="modal hide fade" tabindex="-1"></div>
 
     <!-- /container -->
-    <div id="main-container" class="container">
+    <div id="main-container" class="container-fluid">
       <!-- Top bar -->
       <div id="search-found" class="row hidden-phone">
       </div>
-      <div class="row">
+      <div class="row-fluid">
         <div class="col-md-12">
           <div id="main-flashes">
             <%= render :partial=>'/flash_msg' %>
@@ -38,7 +38,7 @@
       </div>
 
       <!-- /main-content -->
-      <div class="row">
+      <div class="row-fluid">
         <%= yield %>
       </div>
     </div>
