--- a/app/views/pul_store/lae/boxes/edit.html.erb
+++ b/app/views/pul_store/lae/boxes/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id="main-container">
+<div class="container-fluid" id="main-container">
   <div class="row">
     <div class="col-md-12 .col-md-offset-3" id="lae-head">
       <div class="row">
