--- a/app/views/pul_store/lae/boxes/show.html.erb
+++ b/app/views/pul_store/lae/boxes/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" id="main-container">
+<div class="container-fluid" id="main-container">
 	<div class="row">
 		<h1>Box <%= @box.physical_number %></h1>
 		<p id="notice"><%= notice %></p>
