--- a/app/views/shared/lae/_workflow_state_badge.html.erb
+++ b/app/views/shared/lae/_workflow_state_badge.html.erb
@@ -1,3 +1,3 @@
-<span class="label label-large <%= pul_store_base_state_to_label(object.workflow_state, "label") %>" >
+<span class="label <%= pul_store_base_state_to_label(object.workflow_state, "label") %>" >
     <%= object.workflow_state %>
   </span>
