--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -165,7 +165,7 @@
         </div>
         <!-- osd preview -->
         <div class="col-md-3">
-          <div>
+          <div class="viewer-full">
             <%= render :partial => "page_preview" %>
           </div>
         </div>
