--- a/app/views/pul_store/lae/folders/show.html.erb
+++ b/app/views/pul_store/lae/folders/show.html.erb
@@ -6,12 +6,16 @@
   <% end %>
 </h1>
 
-<div class="row">
+<div class="row-fluid">
+  <%= render :partial => 'pul_store/lae/catalog/previous_next_doc' %>
+</div>
+
+<div class="row-fluid">
   <%= render :partial => 'breadcrumb' %>
 </div>
 
 
-<div class="row">
+<div class="row-fluid">
   <ul class="nav nav-pills">
     <li><%= link_to 'Edit This Folder', edit_lae_folder_path(@folder), class: "btn btn-info" %></li>
     <% if(!@folder.box_id.blank?) %>
@@ -22,7 +26,7 @@
   </ul>
 </div>
 
-<div class="row">
+<div class="row-fluid">
     <%= render :partial => 'folder_attributes' %>
   </div>
 <!-- other fields to display -->
