hide edit button on index view for non-editors

--- a/app/views/pul_store/lae/catalog/_document.html.erb
+++ b/app/views/pul_store/lae/catalog/_document.html.erb
@@ -43,6 +43,7 @@
         </div>
       </div>
 
-      <%= link_to "Edit this #{controller_name.classify}", url_for(only_path: true, action: 'edit', id: document.id), class: "btn btn-info" %>
-
+      <% if can? :edit, document %>
+        <%= link_to "Edit this #{controller_name.classify}", url_for(only_path: true, action: 'edit', id: document.id), class: "btn btn-info" %>
+      <% end %>
     </div>
