--- a/app/views/pul_store/lae/boxes/_form.html.erb
+++ b/app/views/pul_store/lae/boxes/_form.html.erb
@@ -40,6 +40,14 @@
       <div class="form-group">
         <div class="col-sm-9 col-sm-offset-3">
           <div class="checkbox">
+          <%= b.check_box :shareable, { class: 'checkbox' }, "true", "false" %>
+          <%= b.label 'Mark Box Public' %>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-9 col-sm-offset-3">
+          <div class="checkbox">
           <%= b.check_box :full, { class: 'checkbox' }, "true", "false" %>
           <%= b.label 'Mark Box Full' %>
           </div>
