--- a/app/assets/stylesheets/iiifOsdViewer.css
+++ b/app/assets/stylesheets/iiifOsdViewer.css
@@ -1,3 +1,18 @@
+.viewer {
+        // border: 1px solid #ccc;
+        height: 520px;
+        //margin: 40px 0 0 40px;
+        width: 650px;
+        margin: 2em auto;
+      }
+
+.viewer-full {
+        // border: 1px solid #ccc;
+        height: 800px;
+        margin: 40px 0 0 40px;
+        width: 1000px;
+      }
+
 .iov {
   box-sizing: border-box;
   overflow: hidden;
@@ -28,9 +43,16 @@
   height: 100%;
 }
 
-.iov-menu-bar .iov-controls, .iov-menu-bar .iov-view-options {
+.iov-menu-bar .iov-controls {
   float: right;
   margin: 6px 10px 0 0;
+}
+
+.iov-menu-bar .iov-view-options {
+  float: right;
+  margin: 6px 10px 0 0;
+  height: 20px;
+  font-size: 14px;
 }
 
 .iov-menu-bar .iov-controls a, .iov-menu-bar .iov-controls a:hover {
@@ -77,7 +99,8 @@
 .iov-list-view .iov-list-view-thumbs-viewport li {
   cursor: pointer;
   list-style-type: none;
-  padding: 5px 5px 5px 5px;
+  padding: 5px 10px 5px 10px;
+  color: white;
 }
 
 .iov-list-view .iov-list-view-thumbs-viewport li img {
@@ -120,7 +143,7 @@
 }
 
 .iov-list-view-thumb-selected {
-  background-color: #999;
+  background-color: #666;
 }
 
 .iov-list-view-controls {
@@ -250,4 +273,57 @@
   margin: 0;
   top: 0;
   width: 100%;
+}
+
+//overrides
+// overrides
+.iov a, .iov a:hover {
+  color: #000;
+}
+
+.iov-header {
+  background: white;
+}
+.iov-list-view-controls {
+  top: 16px;
+  font-size: 16px;
+}
+
+.iov-list-view-controls, .iov .iov-list-view-right-nav, .iov .iov-list-view-left-nav {
+  display: none;
+}
+
+.iov .iov-list-view-right-nav, .iov .iov-list-view-left-nav {
+  color: #000;
+  margin: 0 16px;
+}
+
+.viewer:hover .iov-list-view-controls,
+.viewer:hover .iov .iov-list-view-right-nav,
+.viewer:hover .iov .iov-list-view-left-nav {
+  display: inline-block;
+}
+
+.iov-list-view .iov-list-view-thumbs-viewport ul {
+  margin: 1em 1em 0 0;
+}
+
+.iov-list-view-thumb-selected {
+    background-color: #eee;
+    border-radius: 4px;
+    padding: 1em;
+  }
+
+.iov-list-view .iov-list-view-thumbs-viewport li {
+  padding: 10px 10px 5px 10px;
+  color: #000;
+}
+
+.iov-list-view-thumbs li:hover {
+  background: #477dca;
+  border-radius: 4px;
+}
+
+.iov-menu-bar .iov-controls a, .iov-menu-bar .iov-controls a:hover {
+  color: black;
 }
