fix array error

--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -50,7 +50,7 @@
             showNavigator:  true,
             visibilityRatio: 1,
             minZoomLevel: 1,
-            tileSources: [<%= pul_store_iiif_info_path(page['id']) %>]
+            tileSources: ["<%= pul_store_iiif_info_path(page['id']) %>"]
         }
         OpenSeadragon(osd_config);
       });
