fix array error

--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -43,7 +43,7 @@
         //     images: <%= raw id_to_show.to_json %> }
         //   ]
         // });
-        var osd_confg = {
+        var osd_config = {
             id: <%= pul_store_page_model_string(page['id']) %>,
             prefixUrl: "js/openseadragon/images/",
             preserveViewport: true,
